--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-razorpay": "^1.1.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^1.0.1",
     "wowjs": "^1.1.3"
   },
