--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "rsuite": "^4.10.3",
     "web-vitals": "^1.0.1",
     "wowjs": "^1.1.3"
   },
