--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 7001",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 7000",
     "build": "next build",
     "export": "next build && next export",
     "build:local": "cross-env NODE_OPTIONS=--max-old-space-size=4096 next build",
@@ -29,6 +29,7 @@
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.2",
+    "@reduxjs/toolkit": "^1.8.3",
     "apexcharts": "^3.35.2",
     "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
@@ -39,19 +40,22 @@
     "formik": "^2.2.9",
     "merge": "^2.1.1",
     "next": "^12.0.1",
+    "next-redux-wrapper": "^7.0.5",
     "nprogress": "^0.2.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-apexcharts": "^1.4.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
-    "react-quill": "^0.0.2",
+    "react-quill": "^1.3.5",
+    "react-redux": "^8.0.2",
     "react-scroll": "^1.8.4",
     "react-simple-image-viewer": "^1.1.1",
     "sharp": "^0.30.3",
     "simplebar-react": "^2.3.6",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
+    "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
